<resources>
    <string name="app_name">Smart Care Center</string>
    <string name="title_session_Expired">Session Expired Please Login</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="title_login">Login</string>
    <string name="title_pleasesignin">Login</string>
    <string name="title_username">"Username: "</string>
    <string name="title_password">Password:</string>
    <string name="title_loading">Please Wait....</string>
    <string name="title_ServiceSupport">Service Support</string>
    <string name="title_purchase_order">Purchase Order</string>
    <string name="title_survei">Survey</string>
    <string name="title_News">News</string>

    <string name="title_live_chat">Live Chat</string>
    <string name="title_Setting">Settings</string>
    <string name="title_Presslist">Press List</string>
    <string name="title_Version">"Version "</string>
    <string name="title_myprofile">My Profile</string>
    <string name="title_changepassword">Change Password</string>
    <string name="title_language">Language</string>
    <string name="title_logout">Logout</string>
    <string name="title_userdetails">User Details:</string>
    <string name="title_emailadress">Email Address:</string>
    <string name="title_nohandphone">Phone Number:</string>
    <string name="title_fillrequired">Fill in all forms</string>
    <string name="title_oldpassword">Old Password:</string>
    <string name="title_newpassword">New Password:</string>
    <string name="title_retypepassword">Retype Password:</string>
    <string name="title_save">Save</string>
    <string name="title_changepass_succsess">Password is successfully changed</string>
    <string name="title_languagechange">Language changed successfully</string>
    <string name="title_addform">Add Request</string>
    <string name="title_RequestNone">No Request</string>
    <string name="title_detail">Details Service Support</string>
    <string name="title_Requestno">Request No</string>
    <string name="title_daterequest">Request Date</string>
    <string name="title_descriptionproblem">Problem description</string>
    <string name="title_cancle">Cancel</string>
    <string name="title_serviceticket">Service Ticket</string>
    <string name="title_location">Location</string>
    <string name="title_confirm">Confirmation</string>
    <string name="title_contactCS">Chat With Support</string>
    <string name="title_comment">Comment:</string>
    <string name="title_require_rate">Rating is require</string>
    <string name="title_tanyacs">" I want to ask about the Service Support:"</string>
    <string name="title_uploadphoto">Upload Photo</string>
    <string name="title_newrequest">New Request</string>
    <string name="title_bracnh">Branch</string>
    <string name="title_foto_ready">Photo Ready</string>
    <string name="title_send_request">Send Request</string>
    <string name="title_notification">Notification</string>
    <string name="title_nonotif">No Notification</string>
    <string name="title_notificationdetail">Notification Details</string>
    <string name="title_open">Open</string>
    <string name="title_canelreq">Are you sure to cancel this request?</string>
    <string name="title_deleteReq">Cancel Request</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="title_SendReq">Send Request</string>
    <string name="title_Submitreq">Submiting a new Service Support Request. Continue?</string>
    <string name="title_foc">Free of Charge</string>
    <string name="title_chargelabel">Chargeable</string>
    <string name="title_Passwordwrong">The retype password is not matched</string>
    <string name="title_fotorequired">Photo Required *</string>
    <string name="title_deserror">Description Required *</string>
    <string name="title_passwordRequired">Password of at least 6 characters</string>
    <string name="title_itemcode">Code Item</string>
    <string name="title_nameproduct">Product Name</string>
    <string name="title_categoryproduct">Product Category</string>
    <string name="title_additem">Submit</string>
    <string name="title_qty">"Qty Ordered:  "</string>
    <string name="title_additemfoc">Add New FOC Order</string>
    <string name="title_submit">Submit</string>
    <string name="title_totalbarang">"Total Product: "</string>
    <string name="title_totalitem">"Total Item Ordered: "</string>
    <string name="title_Summary">Summary</string>
    <string name="additemlist">Add Item</string>
    <string name="title_date">Date</string>
    <string name="title_NoFoc">No Foc</string>
    <string name="title_serach">Search...</string>
    <string name="title_norder">Order No.</string>
    <string name="title_startimpesi">"Previous Impression: "</string>
    <string name="title_endimpresi">Present Impression</string>
    <string name="title_totalqty">Total Qty Ordered:</string>
    <string name="title_noitem">No Item</string>
    <string name="title_category">"Category: "</string>
    <string name="title_requiredimpressi">Present Impression Required</string>
    <string name="title_view">View</string>
    <string name="title_nodata">No data</string>
    <string name="title_vieworderfoc">View Order Foc</string>
    <string name="title_cancelorder">Order successfully canceled</string>
    <string name="title_cancelordertitledialog">Cancel Order</string>
    <string name="title_areyoucancelorder">Are you sure you want to cancel the order?</string>
    <string name="add_items">Add Item</string>
    <string name="title_newOrder">New Order</string>
    <string name="title_listitem">Item List</string>
    <string name="title_tanyafoc">"I want to ask about the Order No: "</string>
    <string name="title_submitorder">Submiting a new order. Continue?</string>
    <string name="title_sendorder">Send New Order</string>
    <string name="title_chrageadd">Add Chargeable</string>
    <string name="title_price">"Price: "</string>
    <string name="title_subprice">"Sub Price: "</string>
    <string name="title_grandtotal">Grand Total:</string>
    <string name="title_totalprice">"Total Price: "</string>
    <string name="title_tax">Tax:</string>
    <string name="title_addchargeable">Add New Chargeable Order</string>
    <string name="title_requirenopo">No.Po Required</string>
    <string name="title_detailfoc">Detail FOC</string>
    <string name="title_detailchargeable">Detail Chargeable</string>
    <string name="title_addneworder">Add New Order</string>
    <string name="title_Chargeable">Chargeable Orders</string>
    <string name="title_fororder">FOC Orders</string>
    <string name="title_nopo">"PO: "</string>
    <string name="title_pleaseinputnopo">Please input your PO number</string>
    <string name="title_pleaseinputimpres">Please input the present impression</string>
    <string name="title_Total">Total:</string>
    <string name="title_press">Press:</string>
    <string name="title_By">"By: "</string>
    <string name="title_namapt">Company:</string>
    <string name="title_group">Company Group:</string>
    <string name="title_Namalengkap">Full name:</string>
    <string name="title_excpetation">Failed to connect the server. Please check your internet connection.</string>
    <string name="title_User">User</string>
    <string name="title_exit">Click one more time to exit</string>
    <string name="title_ratingissue">Has your issue been resolved?</string>
    <string name="title_lastiimpressi">Last Impression:</string>
    <string name="empetypassword">Password Required</string>
    <string name="title_updatenew">New version available</string>
    <string name="title_engineernote">Engineer Notes:</string>
    <string name="title_reopen">Reopen Case</string>
    <string name="title_dialogreopen">Reopening Service Support case. Continue?</string>
    <string name="title_reopendialod">Reopen Case Request</string>
    <string name="title_approved">"Approved: "</string>
    <string name="title_tanpanopo">Your PO Number is empty. Continue?</string>
    <string name="title_totalapproved">Total Approved:</string>
    <string name="title_reasoncancel">Cancellation Reason:</string>
    <string name="title_reasonrequired">please input the cancellation reason</string>
    <string name="title_stockhand">"SOH: "</string>
    <string name="title_unduhan">Download File</string>
    <string name="title_stockhandrequired">Stock On Hand Required</string>
    <string name="title_readAll">Mark all as read</string>
    <string name="title_fotooptional">Upload Photo (Optional):</string>
    <string name="title_deskription">"Description: "</string>
    <string name="title_note">Notes:</string>
    <string name="title_uploadfotoimpresi">Present Impression Photo Upload</string>
    <string name="title_choosephoto"><u>Choose Photo</u></string>
    <string name="title_photoimpression">Last Impression Photo</string>
    <string name="title_choosefile">Choose File (.pdf)</string>
    <string name="title_attachfilepdf">PO Attachment</string>
    <string name="title_bigfile">the file size is too big</string>
    <string name="title_reqpdf">PO attachment is required</string>
    <string name="title_undermonitoring">Do you want to set this case to be Under Monitoring?</string>
    <string name="title_followupwithin">Follow up within:</string>
    <string name="title_3hari">3 Days</string>
    <string name="title_7hari">7 Days</string>
    <string name="title_14hari">14 Days</string>
    <string name="title_copyclipboard">Click the link to copy the URL</string>
    <string name="title_linkpdfakanmuncul">The PO upload link will be provided after this request submitted.</string>
    <string name="title_Answere">"Answer: "</string>
    <string name="Title_kirimsurvey">Send Survey</string>
    <string name="title_kirimsekarang">Send Now?</string>
    <string name="title_datesurvvey">"Submit Date: "</string>
    <string name="title_newscategory">News Category</string>
    <string name="title_subnews">Sub Category News</string>
    <string name="title_checkout">Payment Process</string>
    <string name="title_waitingpayment">Waiting for Payment</string>
    <string name="title_choseepymnt">"Choose Payment: "</string>
    <string name="title_back">Back</string>
    <string name="title_submit_order">Submit Order</string>
    <string name="title_btngagal">Retry Payment</string>
    <string name="title_optionaltext">Notes (optional):</string>
    <string name="title_phone">Phone:</string>
    <string name="title_jobtitle">Job Title:</string>
    <string name="title_pleasecomple">Please complete your data below:</string>
    <string name="titile_hisfr">Case History</string>
    <string name="title_chatdetailst">View request details</string>
    <string name="title_pmticket">PM Ticket</string>
    <string name="titile_resetlabel">" "</string>
    <string name="title_dailireport">Daily Report</string>
</resources>