<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/header"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/whitelogo" >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bgwhitecorner"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        android:elevation="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="55dp"
            android:fontFamily="@font/segoeuib"
            android:gravity="center"
            android:text="@string/title_pleasesignin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="26dp"
            android:fontFamily="@font/segoeui"
            android:gravity="center"
            android:text="@string/title_username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/segoeui"
            android:padding="5dp"
            android:text=""
            android:maxLength="50"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="26dp"
            android:fontFamily="@font/segoeui"
            android:gravity="center"
            android:text="@string/title_password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/segoeui"
            android:inputType="textPassword"
            android:padding="5dp"
            android:text=""
            android:maxLength="50"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btnlogin"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/title_login"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/title_forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>