<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/backbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="0dp"
                        android:gravity="center_vertical"
                        android:src="@drawable/back_white" />
                    <TextView
                        android:textSize="15sp"
                        android:textColor="#ffffff"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:text="@string/title_Setting"
                        android:fontFamily="@font/seguisb" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bgwhitecorner"
                android:padding="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:elevation="5dp">
                <TextView
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_changepassword"
                    android:fontFamily="@font/seguisb" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/title_oldpassword"
                    android:fontFamily="@font/seguisb" />
                <EditText
                    android:id="@+id/oldpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/seguisb" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/title_newpassword"
                    android:fontFamily="@font/seguisb" />
                <EditText
                    android:id="@+id/newpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/seguisb" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/title_retypepassword"
                    android:fontFamily="@font/seguisb" />
                <EditText
                    android:id="@+id/repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/seguisb" />
                <TextView
                    android:textColor="@color/dwhite"
                    android:gravity="center"
                    android:id="@+id/save"
                    android:background="@drawable/btnlogin"
                    android:padding="17dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/title_changepassword"
                    android:fontFamily="@font/seguisb" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>