<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:orientation="vertical"
    android:background="@color/dwhite">
    <LinearLayout
    android:orientation="horizontal"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical"
                android:src="@drawable/back_white" />
            <TextView
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:text="@string/title_Setting"
                android:fontFamily="@font/seguisb" />
        </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/myprofile"
        android:background="@drawable/bgwhitecorner"
        android:elevation="5dp"
        android:paddingLeft="14dp"
        android:paddingTop="7dp"
        android:paddingRight="14dp"
        android:paddingBottom="7dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="14dp">
        <ImageView android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/ic_userprofile" />
        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_myprofile"
            android:fontFamily="@font/seguisb" />
        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_marginRight="14dp"
                android:src="@drawable/back_black" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/changepassword"
        android:background="@drawable/bgwhitecorner"
        android:elevation="5dp"
        android:paddingLeft="14dp"
        android:paddingTop="7dp"
        android:paddingRight="14dp"
        android:paddingBottom="7dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="14dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/ic_password" />
        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_changepassword"
            android:fontFamily="@font/seguisb" />
        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_marginRight="14dp"
                android:src="@drawable/back_black" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/multilanguage"
        android:background="@drawable/bgwhitecorner"
        android:elevation="5dp"
        android:paddingLeft="14dp"
        android:paddingTop="7dp"
        android:paddingRight="14dp"
        android:paddingBottom="7dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="14dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/ic_translate" />
        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_language"
            android:fontFamily="@font/seguisb" />
        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_marginRight="14dp"
                android:src="@drawable/back_black" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/logout"
        android:background="@drawable/bgwhitecorner"
        android:elevation="5dp"
        android:paddingLeft="14dp"
        android:paddingTop="7dp"
        android:paddingRight="14dp"
        android:paddingBottom="7dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="14dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/ic_logout" />
        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_logout"
            android:fontFamily="@font/seguisb" />
        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_marginRight="14dp"
                android:src="@drawable/back_black" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>